mvn javafx:run  for running